# mac-dictation

./: .gitignore  README.md  pyproject.toml
daemon/: asr.py  audio.py  config.py  daemon.py  ipc.py
docs/: design.md  implementation-plan.md
hammerspoon/: dictation.lua
launchagent/: com.henry.dictation.plist
scripts/: install.sh  uninstall.sh
tests/: test_asr_prompt.py  test_config.py  test_ipc.py
