[project]
name = "dictation"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mlx-qwen3-asr>=0.1.0",
    "sounddevice>=0.5.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
